2021-01-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfont.c (gr_charcell): Minor.

2021-01-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Handle mono bitmaps in the main blender.

	* graph/gblany.h (_gblender_blit_mono_*): Implement it.
	* graph/gblblit.c (gblender_blit_init): Recognize mono bitmaps.
	* graph/gblblit.h (GBlenderSourceFormat): Add GBLENDER_SOURCE_MONO.

2021-01-24  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* Makefile (FT_INCLUDES): Drop `$(TOP_DIR)/src/dlg`.

2021-01-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Reduce color conversions in the blender (part 2).

	* graph/gblender.h (GBlenderBGR): Define color channel storage.
	* graph/gblblit.c (GDST_CHANNELS): Redefined.
	(GDST_READ): Merged into...
	(GDST_PIX): Redefined.
	* graph/gblany.h (*): Major revisions.

2021-01-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.h (GBLENDER_CHANNEL_VARS): Squash reintroduced bug.

2021-01-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (gr_fill_hline_4): Clean up.

2021-01-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement much faster vertical grid lines.

	* graph/grfill.c (gr_fill_hline_*): Accept pitch increment as
	additional argument and act accordingly.
	(grFillVLine, grFillHLine, grFillRect): Updated all callers.

2021-01-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblany.h (*): Blend a bit faster.

2021-01-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Check blending cache earlier.

	This slightly reworks commit bfbd78261beff2d6 by moving the cache
	check into the initialization functions. this is especially important
	to keep the direct span rendering light.

	* graph/gblany.h (*): Move the cache check from here...
	* graph/gblblit.c (gblender_blit_init, grSetTargetPenBrush): ... to
	here.
	* graph/gblender.h (GBLANDER_VARS, GBLENDER_CHANNEL_VARS): Restore old
	macros.

2021-01-14  Alexei Podtelezhnikov  <apodtele@gmail.com>
